--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+openweathermap.api.key=6a2d7bcc0ccd7c6269addc6f1af23c8b
+openweathermap.base.url=http://api.openweathermap.org/data/2.5/weather?lat=%s&lon=%s&appid=%s
+geolite2.city.database.location=src/main/resources/GeoLite2-City.mmdb
 
