--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,19 @@
             <artifactId>json</artifactId>
             <version>20210307</version>
         </dependency>
+    
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+    
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
 
     </dependencies>
     
