Added the required dependencies incl. postgresql and provided database connection properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.redis.port=6379
 
 weatherdata.cache.duration=10
 weatherdata.grid.size=0.1
+
+
+# PostgreSQL connection properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/weather
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
