persisting the weather data to the database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ geolite2.city.database.location=src/main/resources/GeoLite2-City.mmdb
 # Redis Configuration
 spring.redis.host=localhost
 spring.redis.port=6379
+spring.cache.redis.cache-null-values=true
 
 
 weatherdata.cache.duration=10
