Make the weather_data table depends on the geography table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ weatherdata.grid.size=0.1
 
 
 # PostgreSQL connection properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/weather
+spring.datasource.url=jdbc:postgresql://localhost:5432/weatherdata
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
