make the OkHttpClient singleton

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+# OkHttpClient
+# 10 * 1024 * 1024 or 10 MB cache
+cache.size=10485760 
+cache.directory=src/main/resources/cache
