--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
             <artifactId>okhttp</artifactId>
             <version>4.9.3</version>
         </dependency>
+    
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>4.9.1</version>
+            <scope>test</scope>
+        </dependency>
         
         <dependency>
             <groupId>org.json</groupId>
