--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,12 @@
             <version>1.9.2</version>
             <scope>test</scope>
         </dependency>
+    
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.2</version>
+        </dependency>
 
     </dependencies>
     
